--- a/NordineElOuafrasi/Studierichtingen/gr_la.css
+++ b/NordineElOuafrasi/Studierichtingen/gr_la.css
@@ -1,11 +1,8 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
-/*Zie CSS*/
 @font-face {
     font-family: 'SIMPLIFICA';
-    src: url(/NordineElOuafrasi/SIMPLIFICA\ Typeface.ttf);
+    src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
 
 *{
@@ -19,6 +16,11 @@ body{
     height: 100%;
 }
 /*nav*/
+.top{
+    background-color: rgba(228, 231, 236, 0.8);
+    width: 100%;
+    position: fixed;
+}
 .nav{
     padding: 20px 0px;
     margin: 0 auto;
@@ -170,12 +172,108 @@ ul.dropdown li a:hover{
     width: 100%;
 }
 
-/*footer*/
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+/*container*/
+.container{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+    
+    
 }
+
+.container-text{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.simple-text
+{
+    padding: 10px;
+}
+
+.container-text-weti{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 0px;
+}
+
+.container-text-ict{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-la{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+.container-text-ne-wis{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-proj-woord-taal
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-stem-ws
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+.container-text-gr-la
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+/*tabellen*/
+th, td {
+    text-align: left;
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+    width: 25%;
+    
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2;
+}
+  
+  th {
+    background-color: #1F4591;
+    border-radius: 5px;
+    color: white;
+
+  }
+
+  .list-of-bullets
+  {
+    margin: 1.5em;
+  }
+
+
+
+
+  /*footer*/
 .foot{
     display: flex;
     justify-content: flex-end;
@@ -192,20 +290,30 @@ footer{
     height: 250px;
 }
 .kader{
+    font-family: 'Inter',sans-serif;
     position: absolute;
     background-color: rgba(31, 69, 145, 0.9);
+    color: white;
+    display: flex;
+    flex-direction: column;
     opacity: 80%;
     border-radius: 15px;
     margin-top: 100px;
     width: 280px;
     height: 290px;
 }
+.kader h1{
+    margin-top: 25px;
+    margin-left: 13px;
+    margin-bottom: 18px;
+    font-size: 20px;
+}
 .blauw{
     display: flex;
     flex-direction: row;
     background-color: rgba(31, 69, 145, 0.2);
     width: 100%;
-    height: 250px;
+    height: 220px;
 }
 .txtB{
     font-family: 'Inter',sans-serif;
@@ -213,7 +321,40 @@ footer{
     flex-direction: row;
     margin: 0 auto;
     width: 80%;
+    padding-top: 40px;
 }
+
 .txtBlauw{
     color: #000;
+    margin-right: 130px;
+}
+.txtBlauw h1{
+    font-size: 20px;
+}
+.txtBlauw p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.txtBlauw a{
+    color: #000;
+   text-decoration: none;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: 40px;
+}
+.icon{
+    width: 14%;
+}
+.icon img{
+    width: 100%;
+}
+.icons p{
+    font-size: 14px;
+    margin-left: 13px;
+    line-height: 20px;
+    width: 60%;
 }
