--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -194,7 +194,6 @@ ul.dropdown li a:hover {
 	height: 250px;
 }
 .kader {
-	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -202,15 +201,23 @@ ul.dropdown li a:hover {
 	flex-direction: column;
 	opacity: 80%;
 	border-radius: 15px;
-	margin-top: 100px;
+	margin-top: 90px;
 	width: 280px;
 	height: 290px;
 }
 .kader h1 {
+	font-family: "SIMPLIFICA";
+	display: flex;
+	justify-content: center;
 	margin-top: 25px;
 	margin-left: 13px;
 	margin-bottom: 18px;
-	font-size: 20px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 28px;
+}
+.kader p {
+	font-family: "Inter", sans-serif;
 }
 .blauw {
 	display: flex;
@@ -233,7 +240,9 @@ ul.dropdown li a:hover {
 	margin-right: 130px;
 }
 .txtBlauw h1 {
-	font-size: 20px;
+	font-family: "SIMPLIFICA";
+	letter-spacing: 1px;
+	font-size: 28px;
 }
 .txtBlauw p {
 	font-size: 16px;
@@ -241,6 +250,11 @@ ul.dropdown li a:hover {
 }
 .txtBlauw a {
 	color: #000;
+	text-decoration: none;
+}
+.txtBlauw a:hover {
+	color: #1f4591;
+	font-weight: 600;
 	text-decoration: none;
 }
 .icons {
@@ -254,6 +268,7 @@ ul.dropdown li a:hover {
 	width: 14%;
 }
 .icon img {
+	filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
 	width: 100%;
 }
 .icons p {
@@ -262,7 +277,7 @@ ul.dropdown li a:hover {
 	line-height: 20px;
 	width: 60%;
 }
-
+/*Footer*/
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
@@ -289,8 +304,8 @@ ul.dropdown li a:hover {
 	grid-column: 6/12;
 	grid-row: 2/5;
 	border-left: 1px solid #808080;
-	padding-top: 5%;
-	padding-bottom: 5%;
+	margin-top: 25%;
+	padding-top: 2%;
 }
 .schoolvisieFoto img {
 	margin-left: 40px;
@@ -405,5 +420,8 @@ p {
 .grid {
 	background-image: url(/images/pattern2.svg);
 	background-size: 100%;
-	padding: 100px 0px;
+	padding-top: 90px;
+	padding-bottom: 160px;
+}
+@media (max-width: 480px) {
 }
