--- a/NelleFavoreel/style_Nelle2.css
+++ b/NelleFavoreel/style_Nelle2.css
@@ -7,7 +7,7 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(10, 1fr);
+	grid-template-rows: repeat(10, auto);
 	font-family: "inter";
 	font-size: 15px;
 }
@@ -15,7 +15,6 @@
 	grid-column: 2/7;
 	grid-row: 2/4;
 	margin-bottom: 70px;
-	margin-top: 40px;
 }
 .head h1 {
 	font-weight: 100;
@@ -231,7 +230,6 @@ ul.dropdown li a:hover {
 	height: 250px;
 }
 .kader {
-	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -239,15 +237,23 @@ ul.dropdown li a:hover {
 	flex-direction: column;
 	opacity: 80%;
 	border-radius: 15px;
-	margin-top: 100px;
+	margin-top: 90px;
 	width: 280px;
 	height: 290px;
 }
 .kader h1 {
+	font-family: "SIMPLIFICA";
+	display: flex;
+	justify-content: center;
 	margin-top: 25px;
 	margin-left: 13px;
 	margin-bottom: 18px;
-	font-size: 20px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 28px;
+}
+.kader p {
+	font-family: "Inter", sans-serif;
 }
 .blauw {
 	display: flex;
@@ -270,7 +276,9 @@ ul.dropdown li a:hover {
 	margin-right: 130px;
 }
 .txtBlauw h1 {
-	font-size: 20px;
+	font-family: "SIMPLIFICA";
+	letter-spacing: 1px;
+	font-size: 28px;
 }
 .txtBlauw p {
 	font-size: 16px;
@@ -278,6 +286,11 @@ ul.dropdown li a:hover {
 }
 .txtBlauw a {
 	color: #000;
+	text-decoration: none;
+}
+.txtBlauw a:hover {
+	color: #1f4591;
+	font-weight: 600;
 	text-decoration: none;
 }
 .icons {
@@ -291,6 +304,7 @@ ul.dropdown li a:hover {
 	width: 14%;
 }
 .icon img {
+	filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
 	width: 100%;
 }
 .icons p {
@@ -299,15 +313,11 @@ ul.dropdown li a:hover {
 	line-height: 20px;
 	width: 60%;
 }
-.top {
-	background-color: rgba(228, 231, 236, 0.8);
-	width: 100%;
-	position: fixed;
-}
+/*Footer*/
 .grid {
 	background-image: url(/images/pattern2.svg);
 	background-size: 100%;
-	padding: 100px 0px;
+	padding: 200px 0px;
 }
 @media (max-width: 480px) {
 	.head {
@@ -316,18 +326,28 @@ ul.dropdown li a:hover {
 	}
 	.een {
 		grid-column: 2/12;
-		grid-row: 2/10;
+		grid-row: 2/4;
 		font-weight: 100;
 	}
 	.twee {
 		grid-column: 2/12;
-		grid-row: 4/10;
+		grid-row: 4/6;
 		margin: 0;
 		margin-top: 40px;
 	}
 	.drie {
-		grid-row: 6/12;
+		grid-row: 6/8;
 		grid-column: 2/12;
 		margin: 0;
+		margin-top: 40px;
+	}
+	p {
+		font-size: 13px;
+	}
+	.grid {
+		padding: 0;
+	}
+	.head {
+		padding-top: 150px;
 	}
 }
