--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -204,7 +204,6 @@ ul.dropdown li a:hover {
 	height: 250px;
 }
 .kader {
-	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -212,15 +211,23 @@ ul.dropdown li a:hover {
 	flex-direction: column;
 	opacity: 80%;
 	border-radius: 15px;
-	margin-top: 100px;
+	margin-top: 90px;
 	width: 280px;
 	height: 290px;
 }
 .kader h1 {
+	font-family: "SIMPLIFICA";
+	display: flex;
+	justify-content: center;
 	margin-top: 25px;
 	margin-left: 13px;
 	margin-bottom: 18px;
-	font-size: 20px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 28px;
+}
+.kader p {
+	font-family: "Inter", sans-serif;
 }
 .blauw {
 	display: flex;
@@ -243,7 +250,9 @@ ul.dropdown li a:hover {
 	margin-right: 130px;
 }
 .txtBlauw h1 {
-	font-size: 20px;
+	font-family: "SIMPLIFICA";
+	letter-spacing: 1px;
+	font-size: 28px;
 }
 .txtBlauw p {
 	font-size: 16px;
@@ -251,6 +260,11 @@ ul.dropdown li a:hover {
 }
 .txtBlauw a {
 	color: #000;
+	text-decoration: none;
+}
+.txtBlauw a:hover {
+	color: #1f4591;
+	font-weight: 600;
 	text-decoration: none;
 }
 .icons {
@@ -264,6 +278,7 @@ ul.dropdown li a:hover {
 	width: 14%;
 }
 .icon img {
+	filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
 	width: 100%;
 }
 .icons p {
@@ -272,6 +287,7 @@ ul.dropdown li a:hover {
 	line-height: 20px;
 	width: 60%;
 }
+/*Footer*/
 
 .foto {
 	grid-column: 7/12;
@@ -297,7 +313,6 @@ ul.dropdown li a:hover {
 	grid-row: 1/2;
 	grid-column: 2/9;
 	font-family: "SIMPLIFICA";
-	margin-top: 20%;
 }
 .head h1 {
 	font-size: 60px;
@@ -314,7 +329,8 @@ h3 {
 .grid {
 	background-image: url(/images/pattern2.svg);
 	background-size: 100%;
-	padding: 100px 0px;
+	padding-top: 200px;
+	padding-bottom: 270px;
 }
 @media (max-width: 480px) {
 	.text {
@@ -333,5 +349,8 @@ h3 {
 		width: 140%;
 		grid-column: 2/12;
 		margin-top: 80px;
+	}
+	h3 {
+		font-size: 13px;
 	}
 }
