--- a/NelleFavoreel/style_Nelle4.css
+++ b/NelleFavoreel/style_Nelle4.css
@@ -202,7 +202,6 @@ ul.dropdown li a:hover {
 	height: 250px;
 }
 .kader {
-	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -210,15 +209,23 @@ ul.dropdown li a:hover {
 	flex-direction: column;
 	opacity: 80%;
 	border-radius: 15px;
-	margin-top: 100px;
+	margin-top: 90px;
 	width: 280px;
 	height: 290px;
 }
 .kader h1 {
+	font-family: "SIMPLIFICA";
+	display: flex;
+	justify-content: center;
 	margin-top: 25px;
 	margin-left: 13px;
 	margin-bottom: 18px;
-	font-size: 20px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 28px;
+}
+.kader p {
+	font-family: "Inter", sans-serif;
 }
 .blauw {
 	display: flex;
@@ -241,7 +248,9 @@ ul.dropdown li a:hover {
 	margin-right: 130px;
 }
 .txtBlauw h1 {
-	font-size: 20px;
+	font-family: "SIMPLIFICA";
+	letter-spacing: 1px;
+	font-size: 28px;
 }
 .txtBlauw p {
 	font-size: 16px;
@@ -249,6 +258,11 @@ ul.dropdown li a:hover {
 }
 .txtBlauw a {
 	color: #000;
+	text-decoration: none;
+}
+.txtBlauw a:hover {
+	color: #1f4591;
+	font-weight: 600;
 	text-decoration: none;
 }
 .icons {
@@ -262,6 +276,7 @@ ul.dropdown li a:hover {
 	width: 14%;
 }
 .icon img {
+	filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
 	width: 100%;
 }
 .icons p {
@@ -270,7 +285,7 @@ ul.dropdown li a:hover {
 	line-height: 20px;
 	width: 60%;
 }
-
+/*Footer*/
 .foto img {
 	width: 90%;
 	margin-top: 20%;
@@ -279,7 +294,6 @@ ul.dropdown li a:hover {
 .foto {
 	grid-column: 2/4;
 	grid-row: 3/11;
-	margin-top: 10%;
 	border-right: 1px solid #808080;
 }
 .tekst {
@@ -322,7 +336,8 @@ ul.dropdown li a:hover {
 .grid {
 	background-image: url(/images/pattern2.svg);
 	background-size: 100%;
-	padding: 100px 0px;
+	padding-bottom: 300px 0px;
+	padding-top: 100px;
 }
 @media (max-width: 480px) {
 	.foto {
@@ -343,5 +358,8 @@ ul.dropdown li a:hover {
 		grid-row: 4/5;
 		grid-column: 2/11;
 		margin: 0;
+	}
+	h3 {
+		font-size: 13px;
 	}
 }
