--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -496,21 +496,10 @@ video{
 }
 /*Footer*/
 /*Hamburger*/
-.burger{
-    display: none;
-}
-.burger div{
-    width: 25px;
-    height: 3px;
-    background-color: #102649;
-    margin: 5px;
-}
-.menu-active{
-    transform: translateX(0%);
-}
+
 /*Hamburger*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     body{
         overflow-x: hidden;
     }
@@ -521,30 +510,62 @@ video{
         display: none;
     }
     /*hamburger menu*/
-    .menu ul{
-        margin-right: 0px;
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: #E4E7EC;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-    .menu ul li {
-        opacity: 0;
-    }
-    .burger{
-        display: block;
-        cursor: pointer;
-    }
-    
+
     /*hamburger menu*/
+    .intro{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .jan{
+        width: 100%;
+    }
+    .jan p{
+        width: 100%;
+    }
+    .eerst{
+        padding: 50px 0px;
+    }
+    .main{
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        width: 100%;
+    }
+    .main img{
+        width: 90%;
+    }
+    .pattern{
+        padding: 50px 0px;
+    }
+    .einde{
+        padding: 30px 0px;
+    }
+    .vid{
+        padding-top: 0px;
+        width: 100%;
+    }
+    .home{
+        height: 450px;
+    }
+    .school{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .btn{
+        margin-right: 0px;
+        padding: 20px;
+    }
+    .btn1{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-top: 30px;
+        padding: 20px;
+    }
+    .txtS h1{
+        font-size: 60px;
+        width: 85%;
+    }
     .top{
         box-shadow: none;
         background-color: #E4E7EC;
@@ -554,7 +575,11 @@ video{
         width: 50px;
     }
     video{
-        width: 370px;
+        width: 70%;
+    }
+    .pattern{
+        display: flex;
+        justify-content: center;
     }
     .inschrijven{
         display: flex;
@@ -601,4 +626,45 @@ video{
     .vertline{
         display: none;
     }
+    .btn1::after{
+        display: none;
+    }
+    .btn::after{
+        display: none;
+    }
+    /*foot responsive*/
+    .kader{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 500px;
+        margin-top: 0px;
+    }
+    .kader h1{
+        margin-bottom: 25px;
+    }
+    .icons{
+        justify-content: center;
+    }
+    .icon{
+        width: 10%;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .kader h1{
+        font-size: 35px;
+        margin-top: 0px;
+    }
+    .kader p{
+        font-size: 20px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    /*foot responsive*/
+}
+@media screen and (max-width: 780px){
+
 }
