--- a/NassimEjja/style3.css
+++ b/NassimEjja/style3.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Cabin:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Inter&display=swap");
 
+@font-face {
+	font-family: "SIMPLIFICA";
+	src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
+}
 * {
 	margin: 0;
 	padding: 0;
@@ -13,15 +14,8 @@ body {
 	background-color: #e4e7ec;
 	height: 100%;
 }
-
-.container {
-	padding: 100px 0px;
-	margin: 0 auto;
-	width: 85%;
-}
 /*Important*/
 
-/*nav*/
 /*nav*/
 .top {
 	background-color: rgba(228, 231, 236, 0.8);
@@ -54,7 +48,7 @@ body {
 .image img {
 	width: 100%;
 }
-.rechts {
+.right {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -187,78 +181,125 @@ ul.dropdown li a:hover {
 }
 /*nav*/
 
-.content {
-	display: flex;
-	flex-direction: column;
-	padding-top: 50px;
-	background-image: url(/images/pattern2.svg);
-	background-size: 100%;
-}
-.historiek {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 50px 0 px;
-}
+/*firtstmain*/
 
-.historiek div {
-	width: 30%;
-	border-radius: 5px;
-}
-.historiek h3 {
-	font-family: "inter";
-	font-size: 20px;
-	text-align: center;
-	background-color: #1f4591;
-	padding: 10px 0px;
-	border-radius: 15px;
-	color: #fff;
-	font-weight: 100;
-}
-.historiek p {
-	font-family: "inter";
-	line-height: 22px;
-	padding: 25px 0px;
-}
 .first-main {
 	width: 85%;
 	margin: 0 auto;
-	padding-top: 120px;
 }
-
-.title {
+h1.title {
 	position: relative;
 	line-height: 70px;
 	color: #000;
 	font-family: "SIMPLIFICA";
 	font-size: 60px;
 	font-weight: 100;
-	margin-top: 40px;
+	margin-top: 120px;
+}
+.registration-title {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	width: 100%;
+	background-image: url(/images/secundaire.png);
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 500px;
+	font-size: 100px;
+	font-weight: 300;
+	color: #fff;
+	font-family: "SIMPLIFICA";
 }
 
-h2 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
-	width: 75%;
-	overflow: hidden;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 300px;
-	padding-bottom: 20px;
-	font-size: 40px;
+.first-main h2 {
+	font-size: 18px;
 	font-weight: 300;
-	color: #fff;
-	font-family: "SIMPLIFICA";
+	color: #000;
+	font-family: "Inter", sans-serif;
+	padding: 50px 0px 50px 0px;
 }
-.insch {
+
+/*main*/
+
+.main {
+	width: 85%;
+	margin: 0 auto;
+}
+.registration {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding-top: 100px;
+}
+.registration-class {
+	background-color: rgba(31, 69, 145, 0.2);
+	opacity: 100%;
+	border-radius: 15px;
+	padding-bottom: 50px;
+	font-family: "Inter", sans-serif;
+	text-align: center;
+}
+.registration-class p {
+	width: 80%;
+	padding-top: 20px;
+	text-align: left;
+	padding-bottom: 30px;
+	padding-left: 20px;
+	font-size: 16px;
+	color: #000;
+}
+
+.registration-class a {
+	color: #000;
+	padding: 10px 20px 20px 20px;
+	text-decoration: none;
+	text-align: center;
+	align-items: center;
+	display: inline-block;
+	border: none;
+	outline: none;
+	width: 45%;
+	height: 10px;
+	cursor: pointer;
+	color: white;
+	background: #1f4591;
+	transition: 0.3s;
+	border-radius: 10px;
+}
+.registration-class a:hover {
+	color: #000;
+}
+.registration div {
+	width: 31%;
+}
+.registration-class h4 {
+	padding-top: 10px;
+	display: flex;
+	justify-content: space-around;
+}
+
+h3 {
+	font-size: 20px;
+	font-weight: bold;
+	color: #000;
+	font-family: "Inter", sans-serif;
+}
+
+/*main2*/
+.main2 {
+	width: 85%;
+	margin: 0 auto;
+	font-family: "Inter", sans-serif;
+}
+.registration-title-2 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
 	width: 100%;
-	background-image: url(/images/oude\ college.jpg);
+	background-image: url(/images/inschrijving.png);
 	overflow: hidden;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -268,22 +309,55 @@ h2 {
 	color: #fff;
 	font-family: "SIMPLIFICA";
 }
-.insch2 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
-	width: 100%;
-	background-image: url(/images/Bewegingen.jpg);
-	overflow: hidden;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 500px;
-	font-size: 100px;
-	font-weight: 300;
-	color: #fff;
-	font-family: "SIMPLIFICA";
+
+.second-layer {
+	padding: 100px 0px 100px 0px;
 }
+
+.registration-2 {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.registration-2 div {
+	width: 30%;
+}
+
+.registration-class-2 {
+	background-color: rgba(31, 69, 145, 0.2);
+	opacity: 100%;
+	border-radius: 10px;
+	padding-bottom: 40px;
+}
+
+.registration-class-2 p {
+	width: 90%;
+	padding-top: 20px;
+	padding-left: 20px;
+}
+.registration-class-2 ol {
+	width: 90%;
+	padding-top: 20px;
+	padding-left: 40px;
+}
+.registration-class-2 a {
+	width: 90%;
+	padding-top: 20px;
+	padding-left: 20px;
+}
+.registration-class-2 h4 {
+	padding-top: 10px;
+	display: flex;
+	justify-content: space-around;
+}
+.registration-class-2 a {
+	color: #000;
+}
+.registration-class-2 a:hover {
+	color: rgba(31, 69, 145, 0.9);
+}
+
 /*footer*/
 .foot {
 	display: flex;
@@ -291,7 +365,7 @@ h2 {
 	margin: 0 auto;
 	width: 85%;
 }
-.wit {
+.white {
 	display: flex;
 	align-items: flex-end;
 	justify-content: flex-end;
@@ -300,7 +374,7 @@ h2 {
 	width: 85%;
 	height: 250px;
 }
-.kader {
+.frame {
 	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
@@ -313,13 +387,13 @@ h2 {
 	width: 280px;
 	height: 290px;
 }
-.kader h1 {
+.frame h1 {
 	margin-top: 25px;
 	margin-left: 13px;
 	margin-bottom: 18px;
 	font-size: 20px;
 }
-.blauw {
+.blue {
 	display: flex;
 	flex-direction: row;
 	background-color: rgba(31, 69, 145, 0.2);
@@ -335,18 +409,18 @@ h2 {
 	padding-top: 40px;
 }
 
-.txtBlauw {
+.txtBlue {
 	color: #000;
 	margin-right: 130px;
 }
-.txtBlauw h1 {
+.txtBlue h1 {
 	font-size: 20px;
 }
-.txtBlauw p {
+.txtBlue p {
 	font-size: 16px;
 	margin-top: 20px;
 }
-.txtBlauw a {
+.txtBlue a {
 	color: #000;
 	text-decoration: none;
 }
@@ -369,14 +443,13 @@ h2 {
 	line-height: 20px;
 	width: 60%;
 }
-
 @media only screen and (max-width: 480px) {
 	a {
 		/* tablet & desktop version */
 		display: inline-block;
 		margin-right: 20px;
 	}
-	.historiek div {
+	h1.title {
 		/* tablet */
 		width: 100%;
 	}
@@ -394,5 +467,24 @@ h2 {
 	}
 	.title {
 		text-align: center;
+	}
+	.registration-title {
+		text-align: center;
+	}
+	.registration-class {
+		display: inline-block;
+	}
+	.registration-class-2 {
+		display: inline-block;
+	}
+
+	.registration div {
+		width: 100%;
+		margin-bottom: 50px;
+	}
+	.registration-class-2 div {
+		width: 100%;
+		margin-bottom: 50px;
+		flex-direction: column;
 	}
 }
