--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -500,14 +500,20 @@ video{
 /*Hamburger*/
 
 @media screen and (max-width: 768px) {
-    body{
-        overflow-x: hidden;
-    }
+    /*nav*/
     .txtI{
         display: none;
     }
     .box{
         display: none;
+    }
+    .image{
+        width: 50px;
+    }
+    .top{
+        box-shadow: none;
+        background-color: #E4E7EC;
+        position: relative;
     }
     /*hamburger menu*/
 
@@ -566,14 +572,6 @@ video{
         font-size: 60px;
         width: 85%;
     }
-    .top{
-        box-shadow: none;
-        background-color: #E4E7EC;
-        position: relative;
-    }
-    .image{
-        width: 50px;
-    }
     video{
         width: 70%;
     }
@@ -603,12 +601,6 @@ video{
         width:  100%;
         height: 150px;
         font-size: 40px;
-    }
-    .wit{
-        display: none;
-    }
-    .blauw{
-        display: none;
     }
     .last{
         display: flex;
@@ -641,9 +633,6 @@ video{
         height: 500px;
         margin-top: 0px;
     }
-    .kader h1{
-        margin-bottom: 25px;
-    }
     .icons{
         justify-content: center;
     }
@@ -654,7 +643,8 @@ video{
         width: 100%;
     }
     .kader h1{
-        font-size: 35px;
+        font-size: 60px;
+        margin-bottom: 25px;
         margin-top: 0px;
     }
     .kader p{
@@ -663,8 +653,11 @@ video{
     .foot{
         justify-content: center;
     }
+    .wit{
+        display: none;
+    }
+    .blauw{
+        display: none;
+    }
     /*foot responsive*/
-}
-@media screen and (max-width: 780px){
-
 }
