--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -343,14 +343,35 @@ h3 {
 	.text h3 {
 		margin: 0;
 	}
+	.grid {
+		padding-top: 0;
+	}
+	.head {
+		margin-top: 50px;
+	}
 	.foto {
 		grid-row: 2/3;
 		margin: 0;
-		width: 140%;
+		width: 110%;
 		grid-column: 2/12;
 		margin-top: 80px;
 	}
 	h3 {
 		font-size: 13px;
+	}
+	.image {
+		margin-left: 20px;
+		margin-top: 20px;
+		margin-right: 0;
+	}
+	.top {
+		display: none;
+	}
+	.grid h4 {
+		font-size: 13;
+	}
+	.svg {
+		width: 50px;
+		margin-top: 50px;
 	}
 }
