--- a/NelleFavoreel/style_Nelle2.css
+++ b/NelleFavoreel/style_Nelle2.css
@@ -212,7 +212,6 @@ ul.dropdown li a:hover {
 	width: 100%;
 }
 /*nav*/
-
 /*footer*/
 .foot {
 	display: flex;
@@ -252,6 +251,12 @@ ul.dropdown li a:hover {
 	letter-spacing: 1px;
 	font-size: 28px;
 }
+.image {
+	width: 190px;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
 .kader p {
 	font-family: "Inter", sans-serif;
 }
@@ -262,6 +267,7 @@ ul.dropdown li a:hover {
 	width: 100%;
 	height: 220px;
 }
+
 .txtB {
 	font-family: "Inter", sans-serif;
 	display: flex;
@@ -350,11 +356,7 @@ ul.dropdown li a:hover {
 	.head {
 		padding-top: 100px;
 	}
-	.image {
-		margin-left: 20px;
-		margin-top: 20px;
-		margin-right: 0;
-	}
+
 	.top {
 		display: none;
 	}
@@ -364,5 +366,16 @@ ul.dropdown li a:hover {
 	.svg {
 		width: 50px;
 		margin-top: 50px;
+	}
+	.image {
+		margin-left: 20px;
+		margin-top: 20px;
+		margin-right: 0;
+	}
+	.image {
+		width: 190px;
+	}
+	.txtI p {
+		font-size: 20px;
 	}
 }
