--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -424,4 +424,67 @@ p {
 	padding-bottom: 160px;
 }
 @media (max-width: 480px) {
+	.schoolvisie {
+		grid-column: 2/13;
+		grid-row: 1/2;
+		margin-right: 0%;
+	}
+	.schoolvisieFoto {
+		grid-column: 2/12;
+		grid-row: 2/3;
+		border-left: 0;
+		margin-top: 20px;
+	}
+	.schoolvisieFoto img {
+		margin-left: 0;
+		width: 100%;
+	}
+	.bekwaam {
+		grid-column: 1/12;
+		grid-row: 3/4;
+		margin-left: 0;
+	}
+	.bekwaamFoto {
+		grid-row: 4/5;
+		grid-column: 2/12;
+		border-right: 0;
+		margin: 0;
+		width: 100%;
+	}
+	.bewust {
+		grid-column: 2/13;
+		margin: 0;
+		grid-row: 5/6;
+	}
+	.bewustFoto {
+		border-left: none;
+		grid-column: 2/12;
+		grid-row: 6/7;
+		margin: 0;
+		width: 100%;
+	}
+	.bewogen h1 {
+		padding-bottom: 20px;
+	}
+	.bewogen {
+		grid-row: 7/8;
+		grid-column: 2/12;
+		margin: 0;
+		padding: 0;
+	}
+	.bewogen p {
+		margin: 0;
+	}
+	.bewogen h1 {
+		margin: 0;
+	}
+	.bewogenFoto {
+		border-right: 0;
+		grid-column: 2/13;
+		grid-row: 8/9;
+		margin: 0;
+	}
+	.totSlot {
+		grid-column: 2/13;
+	}
 }
