--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -474,3 +474,42 @@ h3{
   width: 60%;
 }
 /*Footer*/
+@media screen and (max-width: 480px) {
+ /*foot responsive*/
+ .kader{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border-radius: 0px;
+  height: 400px;
+  margin-top: 0px;
+}
+.icons{
+  justify-content: center;
+}
+.icon{
+  width: 10%;
+}
+.icon img{
+  width: 100%;
+}
+.kader h1{
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 25px;
+  margin-top: 0px;
+}
+.kader p{
+  font-size: 20px;
+}
+.foot{
+  justify-content: center;
+}
+.wit{
+  display: none;
+}
+.blauw{
+  display: none;
+}
+}
+/*foot responsive*/
