--- a/NelleFavoreel/menu.css
+++ b/NelleFavoreel/menu.css
@@ -149,6 +149,12 @@ a:hover {
 	font-size: 18px;
 	font-weight: 100;
 }
+.navErik {
+	background-color: #cfd8e5;
+	padding-bottom: 3%;
+	width: 100%;
+	position: fixed;
+}
 
 /*
   * And let's fade it in from the left
