--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -84,18 +84,20 @@ body {
 	width: 100%;
 	position: fixed;
 	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	z-index: 10;
 }
 .nav {
-	padding: 20px 0px;
+	padding: 8px 0;
 	margin: 0 auto;
 	width: 85%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	flex-direction: row;
+	z-index: 10;
 }
 .image {
-	width: 190px;
+	width: 180px;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
@@ -108,7 +110,7 @@ body {
 .image img {
 	width: 100%;
 }
-.rechts {
+.right {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -380,6 +382,10 @@ ul.dropdown li a:hover {
 	.grid h4 {
 		font-size: 13;
 	}
+	.grid {
+		padding-top: 40px;
+		margin-top: 100px;
+	}
 	.svg {
 		width: 50px;
 		margin-top: 50px;
@@ -390,7 +396,7 @@ ul.dropdown li a:hover {
 		justify-content: center;
 		width: 100%;
 		border-radius: 0px;
-		height: 500px;
+		height: 400px;
 		margin-top: 0px;
 	}
 	.icons {
@@ -403,7 +409,8 @@ ul.dropdown li a:hover {
 		width: 100%;
 	}
 	.kader h1 {
-		font-size: 60px;
+		text-align: center;
+		font-size: 40px;
 		margin-bottom: 25px;
 		margin-top: 0px;
 	}
