--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -49,7 +49,7 @@ body{
 .image img{
     width: 100%;
 }
-.rechts{
+.right{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -307,7 +307,7 @@ video{
     font-family: 'Inter',sans-serif;
     margin-bottom: 15px;
 }
-.eerst{
+.first{
     background-color: #CFD8E5;
     padding: 100px 0px;
     
@@ -332,9 +332,9 @@ video{
 }
 .last{
     background-color: #CFD8E5;
-    padding: 100px 0px;
+    padding-top: 100px;
 }
-.einde{
+.end{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -342,7 +342,7 @@ video{
     margin: 0 auto;
     width: 85%;
 }
-.inschrijven{
+.register{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -357,7 +357,7 @@ video{
     font-size: 70px;
     transition: 0.3s;
 }
-.studierichtingen{
+.direction{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -372,10 +372,10 @@ video{
     font-size: 70px;
     transition: 0.3s;
 }
-.studierichtingen:hover{
+.direction:hover{
     background-image: url(/images/HStudierichtingen.jpg);
 }
-.inschrijven:hover{
+.register:hover{
     background-image: url(/images/HInschrijven.jpg);
 }
 .menu ul li:hover::after{
@@ -401,16 +401,16 @@ video{
     margin: 0 auto;
     width: 85%;
 }
-.wit{
+.white{
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    background-color: #E4E7EC;
+    background-color: #CFD8E5;
     margin: 0 auto;
     width: 85%;
     height: 250px;
 }
-.kader{
+.frame{
     position: absolute;
     background-color: rgba(31, 69, 145, 0.9);
     color: white;
@@ -422,7 +422,7 @@ video{
     width: 280px;
     height: 290px;
 }
-.kader h1{
+.frame h1{
     font-family: 'SIMPLIFICA';
     display: flex;
     justify-content: center;
@@ -433,10 +433,10 @@ video{
     letter-spacing: 1px;
     font-size: 28px;
 }
-.kader p{
+.frame p{
     font-family: 'Inter',sans-serif;
 }
-.blauw{
+.blue{
     display: flex;
     flex-direction: row;
     background-color: rgba(31, 69, 145, 0.2);
@@ -452,24 +452,24 @@ video{
     padding-top: 40px;
 }
 
-.txtBlauw{
+.txtBlue{
     color: #000;
     margin-right: 130px;
 }
-.txtBlauw h1{
+.txtBlue h1{
     font-family: 'SIMPLIFICA';
     letter-spacing: 1px;
     font-size: 28px;
 }
-.txtBlauw p{
+.txtBlue p{
     font-size: 16px;
     margin-top: 20px;
 }
-.txtBlauw a{
+.txtBlue a{
     color: #000;
     text-decoration: none;
 }
-.txtBlauw a:hover{
+.txtBlue a:hover{
     color: #1F4591;
     font-weight: 600;
     text-decoration: none;
@@ -493,6 +493,9 @@ video{
     margin-left: 13px;
     line-height: 20px;
     width: 60%;
+}
+footer{
+    background-color: #CFD8E5;
 }
 /*Footer*/
 /*Hamburger*/
@@ -528,7 +531,7 @@ video{
     .jan p{
         width: 100%;
     }
-    .eerst{
+    .first{
         padding: 50px 0px;
     }
     .main{
@@ -543,7 +546,7 @@ video{
     .pattern{
         padding: 50px 0px;
     }
-    .einde{
+    .end{
         padding: 30px 0px;
     }
     .vid{
@@ -579,7 +582,7 @@ video{
         display: flex;
         justify-content: center;
     }
-    .inschrijven{
+    .register{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -590,7 +593,7 @@ video{
         height: 150px;
         font-size: 40px;
     }
-    .studierichtingen{
+    .direction{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -607,7 +610,7 @@ video{
         justify-content: center;
         padding: 20px 0;
     }
-    .einde{
+    .end{
         justify-content: flex-start;
         align-items: flex-start;
         flex-direction: column;
@@ -625,39 +628,47 @@ video{
         display: none;
     }
     /*foot responsive*/
-    .kader{
+    .frame{
         display: flex;
         justify-content: center;
         width: 100%;
         border-radius: 0px;
         height: 400px;
+        padding: 10px 0px;
         margin-top: 0px;
     }
     .icons{
+        flex-direction: column;
         justify-content: center;
+        text-align: center;
+        margin-left: 0px;
     }
     .icon{
         width: 10%;
+        margin-bottom: 10px;
     }
     .icon img{
         width: 100%;
     }
-    .kader h1{
+    .icons p{
+        margin-left: 0px;
+    }
+    .frame h1{
         text-align: center;
         font-size: 40px;
-        margin-bottom: 25px;
+        margin-bottom: 5px;
         margin-top: 0px;
     }
-    .kader p{
-        font-size: 20px;
+    .frame p{
+        font-size: 15px;
     }
     .foot{
         justify-content: center;
     }
-    .wit{
+    .white{
         display: none;
     }
-    .blauw{
+    .blue{
         display: none;
     }
     /*foot responsive*/
