--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -448,7 +448,7 @@ ul.dropdown li a:hover{
         padding-bottom: 100px ;
     }
     /*foot responsive*/
-    .kader{
+    .frame{
         display: flex;
         justify-content: center;
         width: 100%;
@@ -473,22 +473,22 @@ ul.dropdown li a:hover{
     .icons p{
         margin-left: 0px;
     }
-    .kader h1{
+    .frame h1{
         text-align: center;
         font-size: 40px;
         margin-bottom: 5px;
         margin-top: 0px;
     }
-    .kader p{
+    .frame p{
         font-size: 15px;
     }
     .foot{
         justify-content: center;
     }
-    .wit{
+    .white{
         display: none;
     }
-    .blauw{
+    .blue{
         display: none;
     }
     /*foot responsive*/
