--- a/NelleFavoreel/style_Nelle2.css
+++ b/NelleFavoreel/style_Nelle2.css
@@ -221,16 +221,15 @@ ul.dropdown li a:hover {
 	margin: 0 auto;
 	width: 85%;
 }
-.wit {
+.white {
 	display: flex;
 	align-items: flex-end;
 	justify-content: flex-end;
-	background-color: #e4e7ec;
 	margin: 0 auto;
 	width: 85%;
 	height: 250px;
 }
-.kader {
+.frame {
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -242,7 +241,7 @@ ul.dropdown li a:hover {
 	width: 280px;
 	height: 290px;
 }
-.kader h1 {
+.frame h1 {
 	font-family: "SIMPLIFICA";
 	display: flex;
 	justify-content: center;
@@ -253,23 +252,16 @@ ul.dropdown li a:hover {
 	letter-spacing: 1px;
 	font-size: 28px;
 }
-.image {
-	width: 180px;
-	display: flex;
-	align-items: center;
-	flex-direction: row;
-}
-.kader p {
+.frame p {
 	font-family: "Inter", sans-serif;
 }
-.blauw {
+.blue {
 	display: flex;
 	flex-direction: row;
 	background-color: rgba(31, 69, 145, 0.2);
 	width: 100%;
 	height: 220px;
 }
-
 .txtB {
 	font-family: "Inter", sans-serif;
 	display: flex;
@@ -279,24 +271,24 @@ ul.dropdown li a:hover {
 	padding-top: 40px;
 }
 
-.txtBlauw {
+.txtBlue {
 	color: #000;
 	margin-right: 130px;
 }
-.txtBlauw h1 {
+.txtBlue h1 {
 	font-family: "SIMPLIFICA";
 	letter-spacing: 1px;
 	font-size: 28px;
 }
-.txtBlauw p {
+.txtBlue p {
 	font-size: 16px;
 	margin-top: 20px;
 }
-.txtBlauw a {
+.txtBlue a {
 	color: #000;
 	text-decoration: none;
 }
-.txtBlauw a:hover {
+.txtBlue a:hover {
 	color: #1f4591;
 	font-weight: 600;
 	text-decoration: none;
