--- a/NassimEjja/Style.css
+++ b/NassimEjja/Style.css
@@ -395,4 +395,33 @@ h2 {
 	.title {
 		text-align: center;
 	}
+	/*foot responsive*/
+	.icons {
+		justify-content: center;
+	}
+	.icon {
+		width: 10%;
+	}
+	.icon img {
+		width: 100%;
+	}
+	.frame h1 {
+		text-align: center;
+		font-size: 40px;
+		margin-bottom: 25px;
+		margin-top: 0px;
+	}
+	.frame p {
+		font-size: 20px;
+	}
+	.foot {
+		justify-content: center;
+	}
+	.wit {
+		display: none;
+	}
+	.blauw {
+		display: none;
+	}
+	/*foot responsive*/
 }
