--- a/NassimEjja/style3.css
+++ b/NassimEjja/style3.css
@@ -375,7 +375,6 @@ h3 {
 	height: 250px;
 }
 .frame {
-	font-family: "Inter", sans-serif;
 	position: absolute;
 	background-color: rgba(31, 69, 145, 0.9);
 	color: white;
@@ -383,15 +382,22 @@ h3 {
 	flex-direction: column;
 	opacity: 80%;
 	border-radius: 15px;
-	margin-top: 100px;
+	margin-top: 90px;
 	width: 280px;
 	height: 290px;
 }
 .frame h1 {
+	font-family: "SIMPLIFICA";
+	display: flex;
+	justify-content: center;
 	margin-top: 25px;
-	margin-left: 13px;
 	margin-bottom: 18px;
-	font-size: 20px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 28px;
+}
+.frame p {
+	font-family: "Inter", sans-serif;
 }
 .blue {
 	display: flex;
@@ -409,19 +415,26 @@ h3 {
 	padding-top: 40px;
 }
 
-.txtBlue {
+.txtblue {
 	color: #000;
 	margin-right: 130px;
 }
-.txtBlue h1 {
-	font-size: 20px;
+.txtblue h1 {
+	font-family: "SIMPLIFICA";
+	letter-spacing: 1px;
+	font-size: 28px;
 }
-.txtBlue p {
+.txtblue p {
 	font-size: 16px;
 	margin-top: 20px;
 }
-.txtBlue a {
+.txtblue a {
 	color: #000;
+	text-decoration: none;
+}
+.txtblue a:hover {
+	color: #1f4591;
+	font-weight: 600;
 	text-decoration: none;
 }
 .icons {
@@ -435,6 +448,8 @@ h3 {
 	width: 14%;
 }
 .icon img {
+	filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg)
+		brightness(105%) contrast(113%);
 	width: 100%;
 }
 .icons p {
@@ -443,6 +458,7 @@ h3 {
 	line-height: 20px;
 	width: 60%;
 }
+/*Footer*/
 @media only screen and (max-width: 480px) {
 	a {
 		/* tablet & desktop version */
@@ -471,6 +487,9 @@ h3 {
 	.registration-title {
 		text-align: center;
 	}
+    .registration-title-2 {
+		text-align: center;
+	}
 	.registration-class {
 		display: inline-block;
 	}
@@ -487,4 +506,40 @@ h3 {
 		margin-bottom: 50px;
 		flex-direction: column;
 	}
+	.frame {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+		border-radius: 0px;
+		height: 400px;
+		margin-top: 0px;
+	}
+	.icons {
+		justify-content: center;
+	}
+	.icon {
+		width: 10%;
+	}
+	.icon img {
+		width: 100%;
+	}
+	.frame h1 {
+		text-align: center;
+		font-size: 40px;
+		margin-bottom: 25px;
+		margin-top: 0px;
+	}
+	.frame p {
+		font-size: 20px;
+	}
+	.foot {
+		justify-content: center;
+	}
+	.white {
+		display: none;
+	}
+	.blue {
+		display: none;
+	}
+	/*foot responsive*/
 }
