--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -377,39 +377,47 @@ h3 {
 		margin-top: 50px;
 	}
 	/*foot responsive*/
-	.kader {
+	.frame {
 		display: flex;
 		justify-content: center;
 		width: 100%;
 		border-radius: 0px;
 		height: 400px;
+		padding: 10px 0px;
 		margin-top: 0px;
 	}
 	.icons {
+		flex-direction: column;
 		justify-content: center;
+		text-align: center;
+		margin-left: 0px;
 	}
 	.icon {
 		width: 10%;
+		margin-bottom: 10px;
 	}
 	.icon img {
 		width: 100%;
 	}
-	.kader h1 {
+	.icons p {
+		margin-left: 0px;
+	}
+	.frame h1 {
 		text-align: center;
 		font-size: 40px;
-		margin-bottom: 25px;
+		margin-bottom: 5px;
 		margin-top: 0px;
 	}
-	.kader p {
-		font-size: 20px;
+	.frame p {
+		font-size: 15px;
 	}
 	.foot {
 		justify-content: center;
 	}
-	.wit {
+	.white {
 		display: none;
 	}
-	.blauw {
+	.blue {
 		display: none;
 	}
 	/*foot responsive*/
