--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -18,170 +18,167 @@ body{
 /*Important*/
 
 /*nav*/
-.top{
-    background-color: rgba(228, 231, 236, 0.8);
-    width: 100%;
-    position: fixed;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-    z-index: 10;
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
+	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	z-index: 10;
 }
-.nav{
-    padding: 8px 0;
-    margin: 0 auto;
-    width: 85%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    z-index: 10;
+.nav {
+	padding: 8px 0;
+	margin: 0 auto;
+	width: 85%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: row;
+	z-index: 10;
 }
-.image{
-    width: 180px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+.image {
+	width: 180px;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
 }
-.txtI{
-    font-family: 'SIMPLIFICA';
-    margin-left: 30px;
-    font-size: 20px;
+.txtI {
+	font-family: "SIMPLIFICA";
+	margin-left: 30px;
+	font-size: 20px;
 }
-.image img{
-    width: 100%;
+.image img {
+	width: 100%;
 }
-.right{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.right {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
-form{
-    display: flex;
-    align-items: center;
+form {
+	display: flex;
+	align-items: center;
 }
 
 /*Searchbox*/
-input[type="text"]
-{
-    font-family: 'SIMPLIFICA';
-    font-size: 20px;
-    background-color: white;
-    width: 50%;
-    height: 35px;
-    border: 1px solid #000;
-    outline: none;
-    padding: 0 20px;
-    border-radius: 15px 0 0 15px;
+input[type="text"] {
+	font-family: "SIMPLIFICA";
+	font-size: 20px;
+	background-color: white;
+	width: 50%;
+	height: 35px;
+	border: 1px solid #000;
+	outline: none;
+	padding: 0 20px;
+	border-radius: 15px 0 0 15px;
 }
-button[type="submit"]
-{
-    font-family: 'SIMPLIFICA';
-    font-size: 18px;
-    border-radius: 0 15px 15px 0;
-    letter-spacing: 1px;
-    border: none;
-    outline: none;
-    width: 30%;
-    height: 37px;
-    cursor: pointer;
-    color: white;
-    background: #1F4591;
-    transition: 0.3s;
+button[type="submit"] {
+	font-family: "SIMPLIFICA";
+	font-size: 18px;
+	border-radius: 0 15px 15px 0;
+	letter-spacing: 1px;
+	border: none;
+	outline: none;
+	width: 30%;
+	height: 37px;
+	cursor: pointer;
+	color: white;
+	background: #1f4591;
+	transition: 0.3s;
 }
-button[type="submit"]:hover
-{
-    background: #102649;
+button[type="submit"]:hover {
+	background: #102649;
 }
 /*Searchbox*/
 
-.nav ul{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-direction: row;
-    margin-right: 20px;
+.nav ul {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	flex-direction: row;
+	margin-right: 20px;
 }
-.nav a{
-    color: #000;
-    font-size: 22px;
-    font-family: 'SIMPLIFICA';
-    text-decoration: none;
+.nav a {
+	color: #000;
+	font-size: 22px;
+	font-family: "SIMPLIFICA";
+	text-decoration: none;
 }
-.nav li{
-    display: flex;
-    flex-direction: column;
-    margin-right: 30px;
-    list-style: none;
+.nav li {
+	display: flex;
+	flex-direction: column;
+	margin-right: 30px;
+	list-style: none;
 }
-.menu ul li::after{
-    content: '';
-    width: 0%;
-    height: 1px;
-    background: #1F4591;
-    display: block;
-    margin: auto;
-    transition: 0.3s;
+.menu ul li::after {
+	content: "";
+	width: 0%;
+	height: 1px;
+	background: #1f4591;
+	display: block;
+	margin: auto;
+	transition: 0.3s;
 }
 
-.menu ul li:hover::after{
-    width: 100%;
+.menu ul li:hover::after {
+	width: 100%;
 }
-.dropdown{
-    display: flex;
-    flex-direction: column;
-    margin-top: 25px;
+.dropdown {
+	display: flex;
+	flex-direction: column;
+	margin-top: 25px;
 }
-.menu ul li{
-    display: flex;
-    flex-direction: column;
+.menu ul li {
+	display: flex;
+	flex-direction: column;
 }
-.menu{
-    display: flex;
-    flex-direction: row;
-    margin-right: 10px;
+.menu {
+	display: flex;
+	flex-direction: row;
+	margin-right: 10px;
 }
-.menu img{
-    width: 15%;
+.menu img {
+	width: 15%;
 }
 
 /*DropdownList*/
-ul.dropdown{
-    background-color: white;
-    border-radius: 15px;
-    z-index: 10;
+ul.dropdown {
+	background-color: white;
+	border-radius: 15px;
+	z-index: 10;
 }
-ul li ul.dropdown li{
-    padding: 10px;
-    display: block;
+ul li ul.dropdown li {
+	padding: 10px;
+	display: block;
 }
-ul li ul.dropdown{
-    position: absolute;
-    display: none;
-    transition: 0.3s;
+ul li ul.dropdown {
+	position: absolute;
+	display: none;
+	transition: 0.3s;
 }
-ul li:hover ul.dropdown{
-    display: block;
+ul li:hover ul.dropdown {
+	display: block;
 }
-ul.dropdown li::after{
-    width: 0%;
-    height: 1px;
-    background: #1F4591;
-    display: none;
-    margin: auto;
-    transition: 0.3s;
+ul.dropdown li::after {
+	width: 0%;
+	height: 1px;
+	background: #1f4591;
+	display: none;
+	margin: auto;
+	transition: 0.3s;
 }
-ul.dropdown li:hover::after{
-    width: 100%;
+ul.dropdown li:hover::after {
+	width: 100%;
 }
-ul.dropdown li a:hover{
-    color: #1F4591;
-    font-weight: 600;
+ul.dropdown li a:hover {
+	color: #1f4591;
+	font-weight: 600;
 }
 /*Dropdownlist*/
-.svg{ 
-    width: 4%;
+.svg {
+	width: 4%;
 }
-.svg img{
-    width: 100%;
+.svg img {
+	width: 100%;
 }
 /*nav*/
 
