--- a/NordineElOuafrasi/Studierichtingen/studieaanbod.css
+++ b/NordineElOuafrasi/Studierichtingen/studieaanbod.css
@@ -790,3 +790,134 @@ img:hover
 
 }
 
+@media screen and (max-width: 480px) {
+    .navErik{
+      padding-bottom: 30px;
+    }
+    .vl{
+        display: none;
+    }
+    .Opvoeding{
+        flex-direction: column;
+        padding: 70px 0px 100px 0px;
+    }
+    .OP{
+        width: 100%;
+    }
+    .OP p{
+        width: 100%;
+        margin-bottom: 40px;
+    }
+    .OP h1{
+        margin-bottom: 40px;
+    }
+    .fotoOP{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .fotoOP img{
+        width: 90%;
+    }
+    .bewegingen{
+        font-size: 60px;
+        text-align: center;
+        height: 400px;
+    }
+    .end{
+        padding-bottom: 100px ;
+    }
+    /*foot responsive*/
+    .kader{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 400px;
+        padding: 10px 0px;
+        margin-top: 0px;
+    }
+    .icons{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-left: 0px;
+    }
+    .icon{
+        width: 10%;
+        margin-bottom: 10px;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .icons p{
+        margin-left: 0px;
+    }
+    .kader h1{
+        text-align: center;
+        font-size: 40px;
+        margin-bottom: 5px;
+        margin-top: 0px;
+    }
+    .kader p{
+        font-size: 15px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    .wit{
+        display: none;
+    }
+    .blauw{
+        display: none;
+    }
+    /*foot responsive*/
+    a {
+          /* tablet & desktop version */
+          display: inline-block;
+          margin-right: 20px;
+      }
+      h1.title {
+          /* tablet */
+          width: 100%;
+      }
+      .txtB {
+          flex-wrap: wrap;
+      }
+      .txtB div {
+          width: 100%;
+      }
+    .first-main{
+      padding-top: 20px;
+    }
+      .title {
+          text-align: center;
+      }
+      .registration-title {
+          text-align: center;
+      }
+      .registration-class {
+          display: inline-block;
+      }
+      .registration-class-2 {
+          display: inline-block;
+      }
+    .registration-2 div {
+          width: 100%;
+          margin-bottom: 50px;
+      }
+      .registration div {
+          width: 100%;
+          margin-bottom: 50px;
+      }
+      .registration-class-2 div {
+          width: 100%;
+          margin-bottom: 50px;
+          flex-direction: column;
+      }
+    
+    .registration-title-2{
+      text-align: center;
+    }
+  }
+
