--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -23,6 +23,7 @@ body{
     width: 100%;
     position: fixed;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    z-index: 10;
 }
 .nav{
     padding: 8px 0;
@@ -32,6 +33,7 @@ body{
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    z-index: 10;
 }
 .image{
     width: 180px;
@@ -70,11 +72,12 @@ input[type="text"]
     padding: 0 20px;
     border-radius: 15px 0 0 15px;
 }
-input[type="submit"]
+button[type="submit"]
 {
     font-family: 'SIMPLIFICA';
     font-size: 18px;
     border-radius: 0 15px 15px 0;
+    letter-spacing: 1px;
     border: none;
     outline: none;
     width: 30%;
@@ -84,7 +87,7 @@ input[type="submit"]
     background: #1F4591;
     transition: 0.3s;
 }
-input[type="submit"]:hover
+button[type="submit"]:hover
 {
     background: #102649;
 }
