--- a/NordineElOuafrasi/Studierichtingen/tweede_graad.css
+++ b/NordineElOuafrasi/Studierichtingen/tweede_graad.css
@@ -415,16 +415,16 @@ video{
     margin: 0 auto;
     width: 85%;
 }
-.wit{
+.white{
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    background-color: #E4E7EC;
+    background-color: #CFD8E5;
     margin: 0 auto;
     width: 85%;
     height: 250px;
 }
-.kader{
+.frame{
     position: absolute;
     background-color: rgba(31, 69, 145, 0.9);
     color: white;
@@ -436,7 +436,7 @@ video{
     width: 280px;
     height: 290px;
 }
-.kader h1{
+.frame h1{
     font-family: 'SIMPLIFICA';
     display: flex;
     justify-content: center;
@@ -447,10 +447,10 @@ video{
     letter-spacing: 1px;
     font-size: 28px;
 }
-.kader p{
+.frame p{
     font-family: 'Inter',sans-serif;
 }
-.blauw{
+.blue{
     display: flex;
     flex-direction: row;
     background-color: rgba(31, 69, 145, 0.2);
@@ -466,24 +466,24 @@ video{
     padding-top: 40px;
 }
 
-.txtBlauw{
+.txtBlue{
     color: #000;
-    margin-right: 40px;
+    margin-right: 130px;
 }
-.txtBlauw h1{
+.txtBlue h1{
     font-family: 'SIMPLIFICA';
     letter-spacing: 1px;
     font-size: 28px;
 }
-.txtBlauw p{
+.txtBlue p{
     font-size: 16px;
     margin-top: 20px;
 }
-.txtBlauw a{
+.txtBlue a{
     color: #000;
     text-decoration: none;
 }
-.txtBlauw a:hover{
+.txtBlue a:hover{
     color: #1F4591;
     font-weight: 600;
     text-decoration: none;
@@ -507,6 +507,9 @@ video{
     margin-left: 13px;
     line-height: 20px;
     width: 60%;
+}
+footer{
+    background-color: #CFD8E5;
 }
 /*Footer*/
 /*Hamburger*/
@@ -1160,6 +1163,8 @@ img:hover
     font-family: 'SIMPLIFICA';
     margin-top: 1em;
   }
+
+
 
 
 
